--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,7 +32,7 @@
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
    <!-- Load global scripts-->
    
-   <script type="module" src="/assets/jsclient/material.js"></script>
+   <!-- <script type="module" src="/assets/jsclient/material.js"></script> -->
 
    <script src="/assets/jsclient/scripts.js"></script>
 
