--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,7 @@
     </div>
    
   </body>
-  <!-- <script src="/assets/js/bundle.js"></script> -->
+  <script src="/assets/js/bundle.js"></script>
 
    <!-- Load Bootstrap JS bundle-->
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
@@ -33,6 +33,6 @@
    
    <!-- <script type="module" src="/assets/jsclient/material.js"></script> -->
 
-   <!-- <script src="/assets/jsclient/scripts.js"></script> -->
+   <script src="/assets/jsclient/scripts.js"></script>
 
 </html>
