--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,8 +20,16 @@
     <title>asdasd </title>
   </head>
   <body class="nav-fixed bg-light">
+    
     <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
     <div id="root">
+      <i
+      class="material-icons text-primary"
+      style="font-size: 0px;"
+    >
+      info
+    </i>
+      
     </div>
    
   </body>
