--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,7 @@
     <link href="/assets/css/app.css" rel="stylesheet" />
 
    
-    <title>asdasd </title>
+    <title>Comercy</title>
   </head>
   <body class="nav-fixed bg-light">
     
