--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -190,8 +190,9 @@ input[type="file"].file-dropped-area {
 }
 
 .order-image {
-  border: #bfbebe 1px solid;
   background-color: #e7e7e7 !important;
+  -webkit-box-shadow: 3px 2px 10px rgba(39, 39, 39, 0.5);
+          box-shadow: 3px 2px 10px rgba(39, 39, 39, 0.5);
 }
 
 .circle-outlined {
