--- a/public/assets/css/app.scss
+++ b/public/assets/css/app.scss
@@ -5,6 +5,7 @@
 $Roboto: "Roboto", sans-serif;
 $NotoSans: "Noto Sans", sans-serif;
 $Barlow: "Barlow Condensed", sans-serif;
+$chatSize : 900px;
 * {
   font-size: 16px;
   font-family: Arial, Helvetica, sans-serif;
@@ -379,21 +380,28 @@ div.skeleton-text{
 
 .chat-container{
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   gap: 1rem;
   align-items: center;
-  background-color: #131324;
+  
   .container {
     height: 85vh;
-    width: 85vw;
-    background-color: #00000076;
+    width: 95%;
+    border-radius: 10px;
+    box-shadow: 3px 5px 10px rgb(65, 65, 65);
+    background-color: black;
     display: grid;
-    grid-template-columns: 25% 75%;
-    @media screen and (min-width: 720px) and (max-width: 1080px) {
-      grid-template-columns: 35% 65%;
+    grid-template-columns: 35% 65%;
+    // @media screen and (min-width: 720px) and (max-width: 1080px) {
+    //   grid-template-columns: 0% 100%  ;
+    // }
+    @media screen and (max-width: $chatSize) {
+
+      grid-template-rows: 25% 75%;
+      grid-template-columns: 100%;
     }
   }
 }
@@ -403,6 +411,12 @@ div.skeleton-text{
   grid-template-rows: 10% 75% 15%;
   overflow: hidden;
   background-color: #080420;
+  @media screen and (max-width: $chatSize) {
+
+    grid-template-rows: 100%;
+    grid-template-columns: 100%;
+    overflow-x: scroll;
+  }
   .brand {
     display: flex;
     align-items: center;
@@ -415,6 +429,9 @@ div.skeleton-text{
       color: white;
       text-transform: uppercase;
     }
+    @media screen and (max-width: $chatSize) {
+      display:none;
+  }
   }
   .contacts {
     display: flex;
@@ -430,6 +447,9 @@ div.skeleton-text{
         border-radius: 1rem;
       }
     }
+    @media screen and (max-width: $chatSize) {
+      flex-direction: row !important
+  }
     .contact {
       background-color: #ffffff34;
       min-height: 5rem;
@@ -441,12 +461,36 @@ div.skeleton-text{
       gap: 1rem;
       align-items: center;
       transition: 0.5s ease-in-out;
+      @media screen and (max-width: $chatSize) {
+        flex-direction: column;
+        min-width:150px;
+        width:auto;
+        background-color: transparent !important;
+    }
       .avatar {
         img {
           height: 3rem;
+         
         }
+        @media screen and (max-width: $chatSize) {
+          background-color: yellow;
+          border-radius: 50px;
+          padding: 10px
+      }
       }
       .username {
+        div{
+          @media screen and (max-width: $chatSize) {
+            
+          justify-content: center !important;
+        }
+      
+        }
+        div.info-chat{
+          @media screen and (max-width: $chatSize) {
+            display:none !important;
+          }
+        }
         h3 {
           color: white;
         }
